# policy-templates

./: .dockerignore  .gitignore  README.md
.github/workflows/: ci.yml
docs/: genpolicy-adapter.md  owner-bootstrap-and-rotation.md
fixtures/: policy-artifact-vector-v1.json
signing-service/: Cargo.toml  Dockerfile  build.rs
signing-service/deploy/: kubernetes.yaml
signing-service/src/: canonical.rs  descriptor.rs  genpolicy.rs  keyring.rs  lib.rs  main.rs  owner_store.rs  policy.rs
templates/: trustee-resource-policy-v1.rego
